deployfolder/objects/Survey__c.object
<CustomObject>
    <label>Survey</label>
    <nameField>
        <label>Survey Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Surveys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Cases_With_Surveys__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup of cases with surveys sent</description>
        <label>Cases With Surveys</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Surveys</relationshipLabel>
        <relationshipName>Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Submit_Response__c</fullName>
        <description>Message to be displayed to the user when the Survey has been submitted</description>
        <inlineHelpText>Message to be displayed to the user when the Survey has been submitted</inlineHelpText>
        <label>Submit Response</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Survey_Date__c</fullName>
        <description>Date Survey filled out by the customer</description>
        <inlineHelpText>Date Survey filled out by the customer</inlineHelpText>
        <label>Survey Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Survey_Header__c</fullName>
        <label>Survey Header</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Survey_ID__c</fullName>
        <description>Auto-generated Survey ID number</description>
        <displayFormat>{000}</displayFormat>
        <inlineHelpText>Auto-generated Survey ID number</inlineHelpText>
        <label>Survey ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>thankYouLink__c</fullName>
        <label>thankYouLink</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>thankYouText__c</fullName>
        <label>thankYouText</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <defaultValue>&quot;Undefined&quot;</defaultValue>
        <label>URL</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All_SurveyForce</fullName>
        <columns>NAME</columns>
        <columns>Cases_With_Surveys__c</columns>
        <columns>Survey_ID__c</columns>
        <columns>URL__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Survey_Header__c</columns>
        <filterScope>Everything</filterScope>
        <label>All SurveyForce</label>
        <language>en_US</language>
        <sharedTo>
            <role>SystemAdministrators</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>standard_view</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>standard view</label>
    </listViews>
</CustomObject>